feat: get subject attendance detail
