# swagger.json
@@ -626,6 +626,7 @@
                 "tags": [
                     "attendance"
                 ],
+                "operationId": "GetSubjectAttendance",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1280,7 +1281,7 @@
                     "$ref": "#/definitions/domains.Subject"
                 },
                 "subject_attendance": {
-                    "$ref": "#/definitions/domains.SubjectAttendance"
+                    "$ref": "#/definitions/SubjectAttendance"
                 }
             }
         },
@@ -1402,6 +1403,37 @@
                 },
                 "refresh_token": {
                     "type": "string"
+                }
+            }
+        },
+        "SubjectAttendance": {
+            "type": "object",
+            "required": [
+                "classroom_id",
+                "code",
+                "date_time",
+                "id",
+                "note",
+                "subject_id"
+            ],
+            "properties": {
+                "classroom_id": {
+                    "type": "integer"
+                },
+                "code": {
+                    "type": "string"
+                },
+                "date_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "subject_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -1627,37 +1659,6 @@
                     "type": "string"
                 },
                 "school_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "domains.SubjectAttendance": {
-            "type": "object",
-            "required": [
-                "classroom_id",
-                "code",
-                "date_time",
-                "id",
-                "note",
-                "subject_id"
-            ],
-            "properties": {
-                "classroom_id": {
-                    "type": "integer"
-                },
-                "code": {
-                    "type": "string"
-                },
-                "date_time": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "note": {
-                    "type": "string"
-                },
-                "subject_id": {
                     "type": "integer"
                 }
             }
@@ -1931,7 +1932,7 @@
             ],
             "properties": {
                 "subject_attendance": {
-                    "$ref": "#/definitions/domains.SubjectAttendance"
+                    "$ref": "#/definitions/SubjectAttendance"
                 }
             }
         },
@@ -2173,7 +2174,7 @@
             ],
             "properties": {
                 "subject_attendance": {
-                    "$ref": "#/definitions/domains.SubjectAttendance"
+                    "$ref": "#/definitions/SubjectAttendance"
                 }
             }
         },
